fix z-index

--- a/addons/hide-flyout/style.css
+++ b/addons/hide-flyout/style.css
@@ -108,8 +108,9 @@
 /* Both must be above hidden flyout when dragging block with editor-stage-left enabled */
 /* Both must be above category list when columns is enabled so dragged sprites appear aren't obscured */
 /* Stage wrapper must be above target pane so dragged sprites aren't obscured */
+/* However, It cannot be above the sprite context menu. */
 .sa-body-editor [class*="stage-wrapper_stage-wrapper_"]:not([class*="stage-wrapper_full-screen"]) {
-  z-index: 50;
+  z-index: 49;
 }
 [class*="gui_target-wrapper_"] {
   z-index: 49;
